Добавил таблицу детально и ссылку на прибытие

--- a/WEB_UI/Areas/IDSReport/Views/Home/Report_TD.cshtml
+++ b/WEB_UI/Areas/IDSReport/Views/Home/Report_TD.cshtml
@@ -23,6 +23,11 @@
     <script src="~/Scripts/module/report/table_td_report.js"></script>
     <script src="~/Scripts/module/report/view_td_report.js"></script>
     <script src="~/Scripts/view/idsreport/main_td_report.js"></script>
+
+    <script>
+        var url_incoming = '@Url.Action("Incoming", "Home", new { area = "IDSRWT" })';
+        var url_outgoing = '@Url.Action("Outgoing", "Home", new { area = "IDSRWT" })';
+    </script>
 }
 <div id="report">
 
