--- a/WEB_UI/Content/module/report/table_td_report.css
+++ b/WEB_UI/Content/module/report/table_td_report.css
@@ -120,3 +120,14 @@ tr.shown td.details-control {
     background: url('/../Content/DataTables/media/images/details_close.png') no-repeat center center;
     width: 20px;
 }
+
+.detali-operation {
+    border-left: 6px solid #8ae;
+    border-top: 1px solid #8ae;
+    padding: 10px;
+    font-size: 14px;
+    line-height: 1.4;
+    background-color: #eee;
+    border-radius: 4px;
+    text-align: left;
+}
