Исправил замечания по отчету прибытия

--- a/WEB_UI/Areas/IDSRWT/Views/Shared/_IDSRWT.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Shared/_IDSRWT.cshtml
@@ -60,6 +60,7 @@
                                     <a class="dropdown-item" href='@Url.Action("PresentWagonMarking", "Home", new { Area = "Directory" })' target="_blank">@WEB_UI.App_LocalResources.IDSRWTResource.title_link_present_wagon_marking</a>
                                     <a class="dropdown-item" href='@Url.Action("ParkState", "Home", new { Area = "Directory" })' target="_blank">@WEB_UI.App_LocalResources.IDSRWTResource.title_link_park_state</a>
                                     <a class="dropdown-item" href='@Url.Action("Cars", "Home", new { Area = "Directory" })' target="_blank">@WEB_UI.App_LocalResources.IDSRWTResource.title_link_wagon_dir</a>
+                                    <a class="dropdown-item" href='@Url.Action("ComCondition", "Home", new { Area = "Directory" })' target="_blank">@WEB_UI.App_LocalResources.IDSRWTResource.title_link_com_condition</a>
                                 </div>
                             </div>
                         </li>
