--- a/WEB_UI/Areas/IDSRWT/Views/Shared/_IDSRWT.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Shared/_IDSRWT.cshtml
@@ -33,11 +33,10 @@
                             <a class="nav-link" href='@Url.Action("Index", "Home", new { area = "" })'>Номе</a>
                         </li>
                         <li class="nav-item">
-                            @*<a class="nav-link" href='@Url.Action("Index", "Home", new { area = "IDSRWT" })'>ВДС «ЖД АМКР»</a>*@
                             <div class="dropdown  mr-3">
                                 @*<button type="button" class="btn btn-sm dropdown-toggle" data-toggle="dropdown">
-                                    ВДС «ЖД АМКР»
-                                </button>*@
+                    ВДС «ЖД АМКР»
+                </button>*@
                                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href=#>ВДС «ЖД АМКР»</a>
                                 <div class="dropdown-menu">
                                     <a class="dropdown-item" href='@Url.Action("Index", "Home", new { area = "IDSRWT" })'>@WEB_UI.App_LocalResources.IDSRWTResource.home_vds_title</a>
@@ -49,7 +48,6 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            @*<a class="nav-link" href='@Url.Action("Index", "Home", new { Area = "Directory" })' target="_blank">Утилиты</a>*@
                             <div class="dropdown  mr-3">
                                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href=#>Утилиты</a>
                                 <div class="dropdown-menu">
@@ -63,6 +61,9 @@
                                     <a class="dropdown-item" href='@Url.Action("ComCondition", "Home", new { Area = "Directory" })' target="_blank">@WEB_UI.App_LocalResources.IDSRWTResource.title_link_com_condition</a>
                                 </div>
                             </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href='@Url.Action("Report_TD", "Home", new { area = "IDSReport" })' target="_blank">Отчеты ТД</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href='@Url.Action("Index", "Home", new { area = "IDSMORS" })'>ИДС"УСПС"</a>
