Добавил модуль Диаграм amchart

--- a/WEB_UI/Areas/IDSReport/Views/Home/Report_TD.cshtml
+++ b/WEB_UI/Areas/IDSReport/Views/Home/Report_TD.cshtml
@@ -28,6 +28,7 @@
     <script src="~/Scripts/api/shared.js"></script>
     <script src="~/Scripts/api/ids_direct.js"></script>
     <script src="~/Scripts/api/ids_wsd.js"></script>
+    <script src="~/Scripts/module/shared/chart_amcharts.js"></script>
     <script src="~/Scripts/module/report/table_td_report.js"></script>
     <script src="~/Scripts/module/report/view_td_report.js"></script>
     <script src="~/Scripts/view/idsreport/main_td_report.js"></script>
