--- a/WEB_UI/Areas/IDSReport/Views/Home/Report_TD.cshtml
+++ b/WEB_UI/Areas/IDSReport/Views/Home/Report_TD.cshtml
@@ -38,9 +38,9 @@
         var url_outgoing = '@Url.Action("Outgoing", "Home", new { area = "IDSRWT" })';
     </script>
 
-    @*<script src="~/Scripts/amcharts5/index.js"></script>
+    <script src="~/Scripts/amcharts5/index.js"></script>
     <script src="~/Scripts/amcharts5/xy.js"></script>
-    <script src="~/Scripts/amcharts5/themes/Animated.js"></script>*@
+    <script src="~/Scripts/amcharts5/themes/Animated.js"></script>
 }
 
 @*<select class="selectpicker" multiple data-live-search="true">
