--- a/WEB_UI/Areas/IDSReport/Views/Home/Report_TD.cshtml
+++ b/WEB_UI/Areas/IDSReport/Views/Home/Report_TD.cshtml
@@ -10,7 +10,7 @@
     <link href="~/Content/module/report/table_td_report.css" rel="stylesheet" />
     <link href="~/Content/view/idsreport/main_td_report.css" rel="stylesheet">
     <style>
-        #adoption-cargo-operation-amkr-chart {
+        #adoption-cargo-operation-amkr-chart, #adoption-operator-to-arr-chart {
             width: 100%;
             height: 500px;
         }
@@ -40,7 +40,9 @@
 
     <script src="~/Scripts/amcharts5/index.js"></script>
     <script src="~/Scripts/amcharts5/xy.js"></script>
+    <script src="~/Scripts/amcharts5/hierarchy.js"></script>
     <script src="~/Scripts/amcharts5/themes/Animated.js"></script>
+
 }
 
 @*<select class="selectpicker" multiple data-live-search="true">
