--- a/WEB_UI/Areas/IDSReport/Views/Home/Report_TD.cshtml
+++ b/WEB_UI/Areas/IDSReport/Views/Home/Report_TD.cshtml
@@ -8,7 +8,7 @@
     @Styles.Render("~/DateTime/css")
     <link href="~/Content/module/report/view_td_report.css" rel="stylesheet">
     <link href="~/Content/module/report/table_td_report.css" rel="stylesheet" />
-    <link href="~/Content/view/idsreport/main_td_report.css" rel="stylesheet">
+   @* <link href="~/Content/view/idsreport/main_td_report.css" rel="stylesheet">*@
     <!-- Resources -->
 
 }
@@ -33,6 +33,7 @@
     </script>
 
     <script src="~/Scripts/amcharts5/index.js"></script>
+    <script src="~/Scripts/amcharts5/percent.js"></script>
     <script src="~/Scripts/amcharts5/xy.js"></script>
     <script src="~/Scripts/amcharts5/hierarchy.js"></script>
     <script src="~/Scripts/amcharts5/themes/Animated.js"></script>
