Добавил предпоследний отчет

--- a/WEB_UI/Content/module/report/view_td_report.css
+++ b/WEB_UI/Content/module/report/view_td_report.css
@@ -11744,7 +11744,9 @@ fieldset {
 #adoption-cargo-to-arr-chart,
 #adoption-group-cargo-to-arr-chart,
 #adoption-genus-to-arr-chart,
-#adoption-sap-to-arr-chart {
+#adoption-sap-to-arr-chart,
+#adoption-station-to-arr-chart,
+#adoption-division-to-arr-chart {
     width: 100%;
     height: 500px;
 }
