закончил 3 отчет - тест

--- a/WEB_UI/Content/module/report/view_td_report.css
+++ b/WEB_UI/Content/module/report/view_td_report.css
@@ -11746,7 +11746,8 @@ fieldset {
 #adoption-genus-to-arr-chart,
 #adoption-sap-to-arr-chart,
 #adoption-station-to-arr-chart,
-#adoption-division-to-arr-chart {
+#adoption-division-to-arr-chart,
+#adoption-to-gs-chart {
     width: 100%;
     height: 500px;
 }
