--- a/WEB_UI/Areas/IDSReport/Views/Home/Report_TD.cshtml
+++ b/WEB_UI/Areas/IDSReport/Views/Home/Report_TD.cshtml
@@ -8,7 +8,7 @@
     @Styles.Render("~/DateTime/css")
     <link href="~/Content/module/report/view_td_report.css" rel="stylesheet">
     <link href="~/Content/module/report/table_td_report.css" rel="stylesheet" />
-   @* <link href="~/Content/view/idsreport/main_td_report.css" rel="stylesheet">*@
+    @* <link href="~/Content/view/idsreport/main_td_report.css" rel="stylesheet">*@
     <!-- Resources -->
 
 }
@@ -35,6 +35,7 @@
     <script src="~/Scripts/amcharts5/index.js"></script>
     <script src="~/Scripts/amcharts5/percent.js"></script>
     <script src="~/Scripts/amcharts5/xy.js"></script>
+    <script src="~/Scripts/amcharts5/radar.js"></script>
     <script src="~/Scripts/amcharts5/hierarchy.js"></script>
     <script src="~/Scripts/amcharts5/themes/Animated.js"></script>
 
@@ -53,39 +54,9 @@
         <option value="pepperoni">Pepperoni</option>
         <option value="onions">Onions</option>
     </select>*@
+<label id="test1"></label>
+<label id="test2"></label>
+<label id="test3"></label>
 <div id="report">
 
 </div>
-
-
-
-<!--<div class="wrapper d-flex align-items-stretch">
-    <nav id="sidebar">
-        <div class="custom-menu">
-            <button type="button" id="sidebarCollapse" class="btn btn-primary">
-                <i class="fa-solid fa-bars"></i>
-                <span class="sr-only">Toggle Menu</span>
-            </button>
-        </div>
-        <div class="p-4">
-            <h1><a href='@Url.Action("Index", "Home", new { Area = "IDSReport" })' class="logo">@IDSReportResource.system_idsreport_title<span><i class="fa-solid fa-sack-dollar mr-1"></i>@IDSReportResource.report_td_title</span></a></h1>-->
-@*<h3 class="h6 mb-3">@IDSReportResource.report_sd_group_link_cargo</h3>*@
-<!--<ul class="list-unstyled components mb-5 text-left" id="list-sidebar">-->
-@*<li class="active">
-          <a href="#"><i class="fa-solid fa-magnifying-glass-arrow-right mr-1" style="color:#44bef1"></i>@IDSReportResource.report_sd_link_border_crossing</a>
-      </li>
-      <li>
-              <a href="#"><span class="fa fa-user mr-3"></span> About</a>
-    </li>*@
-<!--</ul>
-            <div class="footer">
-                <p>
-
-                </p>
-            </div>
-        </div>
-    </nav>
-    <div id="content" class="p-4 p-md-5 pt-5 pt-1">
-
-    </div>
-</div>-->
