Пытался сделать вывод загруженных документов (Отложил! надо разбираться)

--- a/WEB_UI/Areas/IDSReport/Views/Home/Report_TD.cshtml
+++ b/WEB_UI/Areas/IDSReport/Views/Home/Report_TD.cshtml
@@ -26,6 +26,7 @@
     <script src="~/Scripts/module/report/table_td_report.js"></script>
     <script src="~/Scripts/module/report/view_td_report.js"></script>
     <script src="~/Scripts/view/idsreport/main_td_report.js"></script>
+    <script src="~/Scripts/base64js.min.js"></script>
 
     <script>
         var url_incoming = '@Url.Action("Incoming", "Home", new { area = "IDSRWT" })';
