Исправил ошибки и добавил функционал  1. Добавить по всем  отчетам фильтр «Отчетный период»  2. Добавил новый график

--- a/WEB_UI/Areas/IDSReport/Views/Home/Report_TD.cshtml
+++ b/WEB_UI/Areas/IDSReport/Views/Home/Report_TD.cshtml
@@ -10,6 +10,12 @@
     <link href="~/Content/module/report/table_td_report.css" rel="stylesheet" />
     @* <link href="~/Content/view/idsreport/main_td_report.css" rel="stylesheet">*@
     <!-- Resources -->
+    <style>
+        #chartdiv {
+            width: 100%;
+            height: 500px;
+        }
+    </style>
 
 }
 
@@ -55,9 +61,7 @@
         <option value="pepperoni">Pepperoni</option>
         <option value="onions">Onions</option>
     </select>*@
-<label id="test1"></label>
-<label id="test2"></label>
-<label id="test3"></label>
+@*<div id="chartdiv"></div>*@
 <div id="report">
 
 </div>
