--- a/WEB_UI/Areas/IDSReport/Views/Home/Report_TD.cshtml
+++ b/WEB_UI/Areas/IDSReport/Views/Home/Report_TD.cshtml
@@ -12,12 +12,16 @@
     <link href="~/Content/module/report/table_td_report.css" rel="stylesheet" />
     @* <link href="~/Content/view/idsreport/main_td_report.css" rel="stylesheet">*@
 
-    @*<style>
-            #chartdiv {
-                width: 100%;
-                height: 500px;
-            }
-        </style>*@
+    <style>
+        @*#chartdiv {
+            width: 100%;
+            height: 500px;
+        }*@
+/*    .dataTables_scroll
+    {
+    overflow:auto;
+    }*/
+    </style>
 
 }
 
