разработка отчет 6-1 коррекция графика

--- a/WEB_UI/Content/module/report/view_td_report.css
+++ b/WEB_UI/Content/module/report/view_td_report.css
@@ -11748,7 +11748,13 @@ fieldset {
 #adoption-station-to-arr-chart,
 #adoption-division-to-arr-chart,
 #adoption-to-gs-chart,
-#outgoing-cargo-operator-chart {
+#outgoing-cargo-operator-chart,
+#outgoing-total-operators-chart {
     width: 100%;
     height: 500px;
+}
+
+#outgoing-total-operators-cargo-chart {
+    width: 100%;
+    height: 1000px;
 }
