--- a/WEB_UI/Content/module/report/view_td_report.css
+++ b/WEB_UI/Content/module/report/view_td_report.css
@@ -11749,7 +11749,9 @@ fieldset {
 #adoption-division-to-arr-chart,
 #adoption-to-gs-chart,
 #outgoing-cargo-operator-chart,
-#outgoing-total-operators-chart
+#outgoing-total-operators-chart,
+#outgoing-total-division-metall-chart,
+#outgoing-total-division-cargo-chart 
 {
     width: 100%;
     height: 500px;
