--- a/WEB_UI/Content/module/report/view_td_report.css
+++ b/WEB_UI/Content/module/report/view_td_report.css
@@ -11752,6 +11752,7 @@ fieldset {
 #outgoing-total-operators-chart,
 #outgoing-total-division-metall-chart,
 #outgoing-total-division-cargo-chart,
+#outgoing-total-ext-station-chart,
 #outgoing-total-ext-station-ukr-chart,
 #outgoing-total-ext-station-exp-chart {
     width: 100%;
