Добавил основную форму "Плата за пользование"  + View  + Controller  + Resource  + js и css

--- a/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
@@ -175,9 +175,9 @@
                         </a>
                     </li>
                     <li>
-                        <a class="cd-nav-item item-7" href="#">
-                            <h3>Service #7</h3>
-                            <p>This is the item description</p>
+                        <a class="cd-nav-item item-7" href='@Url.Action("UsageFee", "Home", new { Area = "Directory" })'>
+                            <h3>@DirectoryResource.usage_fee_title</h3>
+                            <p>@DirectoryResource.usage_fee_description</p>
                         </a>
                     </li>
                     <li>
