--- a/WEB_UI/Areas/Directory/Views/Home/UsageFee.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/UsageFee.cshtml
@@ -1,6 +1,6 @@
 ﻿@using WEB_UI.App_LocalResources;
 @{
-    ViewBag.Title = @DirectoryResource.commercial_condition_title;
+    ViewBag.Title = @DirectoryResource.usage_fee_title;
 }
 
 @section styles {
@@ -8,9 +8,9 @@
     @Styles.Render("~/DateTime/css")
 
 
-    <link rel="stylesheet" type="text/css" href="~/Content/view/directory/commercial_condition.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/view/directory/usage_fee.css">
     <!-- модули -->
-    @*<link href="~/Content/module/shared/form_detali.css" rel="stylesheet" />>*@
+    @*<link href="~/Content/module/shared/form_detali.css" rel="stylesheet" />*@
 
 }
 
@@ -23,45 +23,27 @@
     <script src="~/Scripts/module/shared/common.js"></script>
     <script src="~/Scripts/module/shared/modal_confirm_form.js"></script>-->   <!-- Форма сообщений подтверждения -->
     <script src="~/Scripts/api/shared.js"></script>-->                      <!-- Общая библиотека методов API -->
-    <script src="~/Scripts/api/ids_server.js"></script>
+    <script src="~/Scripts/api/ids_server.js"></script>                     <!-- Работа с сервером библиотека методов API -->
     <script src="~/Scripts/api/ids_direct.js"></script>
     <script src="~/Scripts/api/ids_wsd.js"></script>
 
-
-    <!--
-    <!--<script src="~/Scripts/module/shared/epd.js"></script>-->
-    <!-- Библиотека методов для работы ЭПД УЗ -->
-    <!--<script src="~/Scripts/api/us_direct.js"></script>
-    <script src="~/Scripts/module/shared/form_detali.js"></script>
-    <script src="~/Scripts/module/wsd/form_hi_incoming_sostav.js"></script>
-    <script src="~/Scripts/module/wsd/form_manual_incoming_cars.js"></script>
-    <script src="~/Scripts/module/wsd/view_epd.js"></script>-->
-    <!-- Информация по ЭПД -->
-    <!--<script src="~/Scripts/module/wsd/table_manual_cars.js"></script>-->                <!-- Таблицы ручного ввода -->
-    <!--<script src="~/Scripts/module/wsd/form_incoming_cars_detali.js"></script>
-    <script src="~/Scripts/module/wsd/table_incoming_sostav.js"></script>
-    <script src="~/Scripts/module/wsd/table_incoming_cars.js"></script>
-    <script src="~/Scripts/module/wsd/view_incoming_cars.js"></script>
-    <script src="~/Scripts/module/wsd/view_incoming_report.js"></script>            <!-- Отчеты по прибытию -->
-    -->
-    <script src="~/Scripts/view/directory/main_commercial_condition.js"></script> <!--  -->
+    <script src="~/Scripts/view/directory/main_usage_fee.js"></script> <!--  -->
 }
 
 <input id="username" type="hidden" value="@User.Identity.Name" />
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nb-incoming" aria-controls="nb-incoming" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse text-light" id="nb-incoming">
-            <form class="form-inline d-flex w-100">
+            @*<form class="form-inline d-flex w-100">
                 <div class="form-group mb-2">
                     <label for="num_vagon" class="col-form-label-sm mr-2">Номер вагона:</label>
                     <input type="number" class="form-control-sm" id="num_vagon" name="num_vagon">
                 </div>
                 <button id="searsh" class="btn btn-primary btn-sm ml-1 mb-2">Найти</button>
-            </form>
+            </form>*@
         </div>
         <div>
             <label class="text-warning">@User.Identity.Name</label><br />
@@ -77,12 +59,12 @@
     <div class="row mt-1">
         <div class="col-sm-12">
             <div class="card bg-light mb-3">
-                <div class="card-header">Информация по вагону</div>
+                <div class="card-header">Расчет платы за пользование</div>
                 <div class="card-body">
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="card border-secondary mb-3">
-                                <div class="card-header">Текущая информация</div>
+                                <div class="card-header">Справочник операторов</div>
                                 <div class="card-body text-secondary" id="wagon-detali">
 
                                 </div>
@@ -90,7 +72,7 @@
                         </div>
                         <div class="col-sm-6">
                             <div class="card border-primary mb-3">
-                                <div class="card-header">Изменить</div>
+                                <div class="card-header">Род вагонов</div>
                                 <div class="card-body text-primary" id="wagon-edit">
 
                                 </div>
@@ -106,3 +88,4 @@
 
     </div>
 </div>
+
