--- a/WEB_UI/Content/DataTables/extensions/Buttons/css/buttons.semanticui.css
+++ b/WEB_UI/Content/DataTables/extensions/Buttons/css/buttons.semanticui.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @keyframes dtb-spinner {
   100% {
     transform: rotate(360deg);
@@ -28,6 +27,18 @@
     transform: rotate(360deg);
   }
 }
+div.dataTables_wrapper {
+  position: relative;
+}
+
+div.dt-buttons {
+  position: initial;
+}
+div.dt-buttons .dt-button {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 div.dt-button-info {
   position: fixed;
   top: 50%;
@@ -37,7 +48,7 @@ div.dt-button-info {
   margin-left: -200px;
   background-color: white;
   border: 2px solid #111;
-  box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.3);
+  box-shadow: 3px 4px 10px 1px rgba(0, 0, 0, 0.3);
   border-radius: 3px;
   text-align: center;
   z-index: 21;
@@ -53,14 +64,66 @@ div.dt-button-info > div {
   padding: 1em;
 }
 
+div.dtb-popover-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 22px;
+  height: 22px;
+  border: 1px solid #eaeaea;
+  background-color: #f9f9f9;
+  text-align: center;
+  border-radius: 3px;
+  cursor: pointer;
+  z-index: 2003;
+}
+
+button.dtb-hide-drop {
+  display: none !important;
+}
+
 div.dt-button-collection-title {
   text-align: center;
   padding: 0.3em 0 0.5em;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
   font-size: 0.9em;
 }
 
 div.dt-button-collection-title:empty {
   display: none;
+}
+
+span.dt-button-spacer {
+  display: inline-block;
+  margin: 0.5em;
+  white-space: nowrap;
+}
+span.dt-button-spacer.bar {
+  border-left: 1px solid rgba(0, 0, 0, 0.3);
+  vertical-align: middle;
+  padding-left: 0.5em;
+}
+span.dt-button-spacer.bar:empty {
+  height: 1em;
+  width: 1px;
+  padding-left: 0;
+}
+
+div.dt-button-collection span.dt-button-spacer {
+  width: 100%;
+  font-size: 0.9em;
+  text-align: center;
+  margin: 0.5em 0;
+}
+div.dt-button-collection span.dt-button-spacer:empty {
+  height: 0;
+  width: 100%;
+}
+div.dt-button-collection span.dt-button-spacer.bar {
+  border-left: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  padding-left: 0;
 }
 
 div.dt-button-collection {
@@ -69,15 +132,21 @@ div.dt-button-collection {
   left: 0;
   min-width: 200px;
   margin-top: 3px !important;
+  margin-bottom: 3px !important;
   z-index: 2002;
   background: white;
+  border: 1px solid rgba(34, 36, 38, 0.15);
+  font-size: 1em;
+  padding: 0.5rem;
 }
 div.dt-button-collection.fixed {
   position: fixed;
+  display: block;
   top: 50%;
   left: 50%;
   margin-left: -75px;
-  border-radius: 0;
+  border-radius: 5px;
+  background-color: white;
 }
 div.dt-button-collection.fixed.two-column {
   margin-left: -200px;
@@ -88,7 +157,29 @@ div.dt-button-collection.fixed.three-column {
 div.dt-button-collection.fixed.four-column {
   margin-left: -300px;
 }
-div.dt-button-collection > :last-child {
+div.dt-button-collection.fixed.columns {
+  margin-left: -409px;
+}
+@media screen and (max-width: 1024px) {
+  div.dt-button-collection.fixed.columns {
+    margin-left: -308px;
+  }
+}
+@media screen and (max-width: 640px) {
+  div.dt-button-collection.fixed.columns {
+    margin-left: -203px;
+  }
+}
+@media screen and (max-width: 460px) {
+  div.dt-button-collection.fixed.columns {
+    margin-left: -100px;
+  }
+}
+div.dt-button-collection.fixed > :last-child {
+  max-height: 100vh;
+  overflow: auto;
+}
+div.dt-button-collection.two-column > :last-child, div.dt-button-collection.three-column > :last-child, div.dt-button-collection.four-column > :last-child {
   display: block !important;
   -webkit-column-gap: 8px;
   -moz-column-gap: 8px;
@@ -96,7 +187,7 @@ div.dt-button-collection > :last-child {
   -o-column-gap: 8px;
   column-gap: 8px;
 }
-div.dt-button-collection > :last-child > * {
+div.dt-button-collection.two-column > :last-child > *, div.dt-button-collection.three-column > :last-child > *, div.dt-button-collection.four-column > :last-child > * {
   -webkit-column-break-inside: avoid;
   break-inside: avoid;
 }
@@ -105,10 +196,6 @@ div.dt-button-collection.two-column {
 }
 div.dt-button-collection.two-column > :last-child {
   padding-bottom: 1px;
-  -webkit-column-count: 2;
-  -moz-column-count: 2;
-  -ms-column-count: 2;
-  -o-column-count: 2;
   column-count: 2;
 }
 div.dt-button-collection.three-column {
@@ -116,10 +203,6 @@ div.dt-button-collection.three-column {
 }
 div.dt-button-collection.three-column > :last-child {
   padding-bottom: 1px;
-  -webkit-column-count: 3;
-  -moz-column-count: 3;
-  -ms-column-count: 3;
-  -o-column-count: 3;
   column-count: 3;
 }
 div.dt-button-collection.four-column {
@@ -127,14 +210,95 @@ div.dt-button-collection.four-column {
 }
 div.dt-button-collection.four-column > :last-child {
   padding-bottom: 1px;
-  -webkit-column-count: 4;
-  -moz-column-count: 4;
-  -ms-column-count: 4;
-  -o-column-count: 4;
   column-count: 4;
 }
 div.dt-button-collection .dt-button {
   border-radius: 0;
+}
+div.dt-button-collection.columns {
+  width: auto;
+}
+div.dt-button-collection.columns > :last-child {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 6px;
+  width: 818px;
+  padding-bottom: 1px;
+}
+div.dt-button-collection.columns > :last-child .dt-button {
+  min-width: 200px;
+  flex: 0 1;
+  margin: 0;
+}
+div.dt-button-collection.columns.dtb-b3 > :last-child, div.dt-button-collection.columns.dtb-b2 > :last-child, div.dt-button-collection.columns.dtb-b1 > :last-child {
+  justify-content: space-between;
+}
+div.dt-button-collection.columns.dtb-b3 .dt-button {
+  flex: 1 1 32%;
+}
+div.dt-button-collection.columns.dtb-b2 .dt-button {
+  flex: 1 1 48%;
+}
+div.dt-button-collection.columns.dtb-b1 .dt-button {
+  flex: 1 1 100%;
+}
+@media screen and (max-width: 1024px) {
+  div.dt-button-collection.columns > :last-child {
+    width: 612px;
+  }
+}
+@media screen and (max-width: 640px) {
+  div.dt-button-collection.columns > :last-child {
+    width: 406px;
+  }
+  div.dt-button-collection.columns.dtb-b3 .dt-button {
+    flex: 0 1 32%;
+  }
+}
+@media screen and (max-width: 460px) {
+  div.dt-button-collection.columns > :last-child {
+    width: 200px;
+  }
+}
+div.dt-button-collection div.dt-button-collection-title {
+  font-size: 1rem;
+}
+div.dt-button-collection.columns div.ui.basic.buttons span.dt-button-spacer {
+  background: transparent !important;
+  border: none;
+  flex: 1 1 100%;
+}
+div.dt-button-collection.columns div.ui.basic.buttons span.dt-button-spacer:hover {
+  background: transparent !important;
+}
+div.dt-button-collection:not(.columns) .ui.vertical.buttons {
+  width: 100%;
+  border: none;
+}
+div.dt-button-collection.columns .ui.vertical.buttons {
+  flex-direction: row;
+  border: none;
+}
+div.dt-button-collection button.dt-button {
+  border: 1px solid rgba(34, 36, 38, 0.15) !important;
+}
+div.dt-button-collection div.dt-btn-split-wrapper {
+  display: flex;
+}
+div.dt-button-collection div.dt-btn-split-wrapper button {
+  flex-grow: 1 !important;
+  flex-basis: auto !important;
+  width: auto !important;
+  border-top-right-radius: 0px !important;
+}
+div.dt-button-collection div.dt-btn-split-wrapper button.dt-btn-split-drop {
+  flex-grow: 0 !important;
+  flex-basis: auto !important;
+  border-bottom-left-radius: 0px !important;
+  border-bottom-right-radius: 0px !important;
+  border-top-right-radius: 4px !important;
 }
 
 button.buttons-collection.ui.button span:after {
@@ -180,8 +344,8 @@ div.dt-buttons a.button.processing:after {
   margin: -8px 0 0 -8px;
   box-sizing: border-box;
   display: block;
-  content: ' ';
-  border: 2px solid #282828;
+  content: " ";
+  border: 2px solid rgb(40, 40, 40);
   border-radius: 50%;
   border-left-color: transparent;
   border-right-color: transparent;
@@ -190,4 +354,56 @@ div.dt-buttons a.button.processing:after {
   -ms-animation: dtb-spinner 1500ms infinite linear;
   -webkit-animation: dtb-spinner 1500ms infinite linear;
   -moz-animation: dtb-spinner 1500ms infinite linear;
+}
+div.dt-buttons.ui.buttons {
+  flex-wrap: wrap;
+}
+div.dt-buttons.ui.basic.buttons .ui.button {
+  border-bottom: 1px solid rgba(34, 36, 38, 0.15);
+  margin-bottom: -1px;
+}
+div.dt-buttons.ui.basic.buttons .ui.button:hover {
+  background: transparent !important;
+}
+
+span.dt-down-arrow {
+  display: none;
+}
+
+span.dt-button-spacer {
+  cursor: inherit;
+}
+span.dt-button-spacer.bar {
+  padding-left: 1.5em;
+}
+span.dt-button-spacer.bar:empty {
+  height: inherit;
+}
+
+div.dt-button-collection span.dt-button-spacer {
+  border-top: 1px solid rgba(34, 36, 38, 0.15);
+}
+div.dt-button-collection span.dt-button-spacer.bar {
+  border-bottom: none;
+  padding-left: 1.5em;
+}
+
+div.dt-buttons.ui.basic.buttons .button.dt-button-spacer {
+  background: rgba(34, 36, 38, 0.05) !important;
+  box-shadow: none;
+  cursor: initial;
+}
+div.dt-buttons.ui.basic.buttons .button.dt-button-spacer:hover {
+  background-color: rgba(34, 36, 38, 0.05) !important;
+}
+
+div.dt-btn-split-wrapper:active:not(.disabled) button.button, div.dt-btn-split-wrapper.active:not(.disabled) button.button {
+  background-color: #f8f8f8 !important;
+}
+div.dt-btn-split-wrapper:active:not(.disabled) button.dt-btn-split-drop, div.dt-btn-split-wrapper.active:not(.disabled) button.dt-btn-split-drop {
+  box-shadow: none;
+  background-color: transparent !important;
+}
+div.dt-btn-split-wrapper:active:not(.disabled) button.button:hover, div.dt-btn-split-wrapper.active:not(.disabled) button.button:hover {
+  background-color: transparent !important;
 }
