--- a/WEB_UI/Content/DataTables/extensions/Buttons/css/mixins.scss
+++ b/WEB_UI/Content/DataTables/extensions/Buttons/css/mixins.scss
@@ -9,21 +9,12 @@
 
 @mixin dtb-two-stop-gradient($fromColor, $toColor) {
 	background-color: $toColor; /* Fallback */
-	background: -webkit-linear-gradient(top, $fromColor 0%, $toColor 100%); /* Chrome 10+, Saf5.1+, iOS 5+ */
-	background:    -moz-linear-gradient(top, $fromColor 0%, $toColor 100%); /* FF3.6 */
-	background:     -ms-linear-gradient(top, $fromColor 0%, $toColor 100%); /* IE10 */
-	background:      -o-linear-gradient(top, $fromColor 0%, $toColor 100%); /* Opera 11.10+ */
-	background:         linear-gradient(to bottom, $fromColor 0%, $toColor 100%);
+	background: linear-gradient(to bottom, $fromColor 0%, $toColor 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#{nth( $fromColor, 1 )}', EndColorStr='#{nth( $toColor, 1 )}');
 }
 
 @mixin dtb-radial-gradient ($fromColor, $toColor ) {
 	background: $toColor; /* Fallback */
-	background:     -ms-radial-gradient(center, ellipse farthest-corner, $fromColor 0%, $toColor 100%); /* IE10 Consumer Preview */ 
-	background:    -moz-radial-gradient(center, ellipse farthest-corner, $fromColor 0%, $toColor 100%); /* Firefox */ 
-	background:      -o-radial-gradient(center, ellipse farthest-corner, $fromColor 0%, $toColor 100%); /* Opera */ 
-	background: -webkit-gradient(radial, center center, 0, center center, 497, color-stop(0, $fromColor), color-stop(1, $toColor)); /* Webkit (Safari/Chrome 10) */ 
-	background: -webkit-radial-gradient(center, ellipse farthest-corner, $fromColor 0%, $toColor 100%); /* Webkit (Chrome 11+) */ 
 	background: radial-gradient(ellipse farthest-corner at center, $fromColor 0%, $toColor 100%); /* W3C Markup, IE10 Release Preview */ 
 }
 
@@ -32,10 +23,12 @@
 	// Fixed positioning feature
 	&.fixed {
 		position: fixed;
+		display: block;
 		top: 50%;
 		left: 50%;
 		margin-left: -75px;
-		border-radius: 0;
+		border-radius: 5px;
+		background-color: white;
 
 		&.two-column {
 			margin-left: -200px;
@@ -48,9 +41,33 @@
 		&.four-column {
 			margin-left: -300px;
 		}
+
+		&.columns {
+			// Four column
+			margin-left: -409px;
+
+			@media screen and (max-width: 1024px) {
+				margin-left: -308px;
+			}
+
+			@media screen and (max-width: 640px) {
+				margin-left: -203px;
+			}
+
+			@media screen and (max-width: 460px) {
+				margin-left: -100px;
+			}
+		}
+
+		> :last-child {
+			max-height: 100vh;
+			overflow: auto;
+		}
 	}
 
-	> :last-child {
+	&.two-column > :last-child,
+	&.three-column > :last-child,
+	&.four-column > :last-child {
 		> * {
 			-webkit-column-break-inside: avoid;
 			break-inside: avoid;
@@ -70,11 +87,6 @@
 
 		> :last-child {
 			padding-bottom: 1px;
-
-			-webkit-column-count: 2;
-				-moz-column-count: 2;
-				-ms-column-count: 2;
-					-o-column-count: 2;
 			column-count: 2;
 		}
 	}
@@ -84,11 +96,6 @@
 
 		> :last-child {
 			padding-bottom: 1px;
-
-			-webkit-column-count: 3;
-				-moz-column-count: 3;
-				-ms-column-count: 3;
-					-o-column-count: 3;
 			column-count: 3;
 		}
 	}
@@ -98,11 +105,6 @@
 
 		> :last-child {
 			padding-bottom: 1px;
-
-			-webkit-column-count: 4;
-				-moz-column-count: 4;
-				-ms-column-count: 4;
-					-o-column-count: 4;
 			column-count: 4;
 		}
 	}
@@ -110,6 +112,71 @@
 	// Chrome fix - 531528
 	.dt-button {
 		border-radius: 0;
+	}
+
+	&.columns {
+		// Four column layout
+		width: auto;
+
+		> :last-child {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: flex-start;
+			align-items: center;
+			gap: 6px;
+
+			width: 818px;
+			padding-bottom: 1px;
+			
+			.dt-button {
+				min-width: 200px;
+				flex: 0 1;
+				margin: 0;
+			}
+		}
+
+		&.dtb-b3,
+		&.dtb-b2,
+		&.dtb-b1 {
+			> :last-child {
+				justify-content: space-between;
+			}
+		}
+
+		&.dtb-b3 .dt-button {
+			flex: 1 1 32%;
+		}
+		&.dtb-b2 .dt-button {
+			flex: 1 1 48%;
+		}
+		&.dtb-b1 .dt-button {
+			flex: 1 1 100%;
+		}
+
+		@media screen and (max-width: 1024px) {
+			// Three column layout
+			> :last-child {
+				width: 612px;
+			}
+		}
+
+		@media screen and (max-width: 640px) {
+			// Two column layout
+			> :last-child {
+				width: 406px;
+			}
+
+			&.dtb-b3 .dt-button {
+				flex: 0 1 32%;
+			}
+		}
+
+		@media screen and (max-width: 460px) {
+			// Single column
+			> :last-child {
+				width: 200px;
+			}
+		}
 	}
 }
 
