Окно плата за пользование  + Добавил выборку оператор-род  + Начал форму "период-ставка"

--- a/WEB_UI/Areas/Directory/Views/Home/UsageFee.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/UsageFee.cshtml
@@ -61,26 +61,30 @@
     <div class="row mt-1">
         <div class="col-sm-12">
             <div class="card bg-light mb-3">
-                <div class="card-header">Расчет платы за пользование</div>
+                <div class="card-header text-center">РАСЧЕТ ПЛАТЫ ЗА ПОЛЬЗОВАНИЕ</div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-5">
                             <div class="card border-secondary mb-3">
                                 <div class="card-header">Справочник операторов</div>
-                                <div class="card-body text-secondary">
+                                <div class="card-body">
                                     <div class="row">
-                                        <div class="col-sm-12" id="operators-wagons" >
+                                        <div class="col-sm-12" id="operators-wagons">
 
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-7">
                             <div class="card border-primary mb-3">
                                 <div class="card-header">Род вагонов</div>
-                                <div class="card-body text-primary" id="wagon-edit">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-sm-12" id="operators-wagons-genus">
 
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -88,10 +92,20 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="row mt-1">
+        <div class="col-sm-12">
+            <div class="card bg-light mb-3">
+                <div class="card-header text-center">УСЛОВИЯ РАСЧЕТА</div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-sm-12" id="form-edit">
 
-
-
-
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
