--- a/WEB_UI/Areas/Directory/Views/Home/UsageFee.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/UsageFee.cshtml
@@ -99,8 +99,29 @@
                 <div class="card-header text-center">УСЛОВИЯ РАСЧЕТА</div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-sm-12" id="form-edit">
+                        <div class="col-sm-3">
+                            <div class="card border-secondary mb-3">
+                                <div class="card-header">УСЛОВИЕ</div>
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-sm-12" id="form-edit">
 
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-9">
+                            <div class="card border-primary mb-3">
+                                <div class="card-header">ПЕРИОДЫ</div>
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-sm-12" id="list-period">
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
