--- a/WEB_UI/Content/view/directory/usage_fee.css
+++ b/WEB_UI/Content/view/directory/usage_fee.css
@@ -1,2 +1,35 @@
-﻿body {
+﻿.ui-front {
+    z-index: 1100;
 }
+
+.date-picker {
+    z-index: 1100;
+}
+
+.date-picker-wrapper {
+    z-index: 1100;
+}
+
+    .date-picker-wrapper .gap {
+        z-index: 1100;
+    }
+
+        .date-picker-wrapper .gap .gap-line .gap-1 {
+            z-index: 1100;
+        }
+
+        .date-picker-wrapper .gap .gap-line .gap-2 {
+            z-index: 1102;
+        }
+
+        .date-picker-wrapper .gap .gap-line .gap-3 {
+            z-index: 1102;
+        }
+
+        .date-picker-wrapper .gap .gap-top-mask {
+            z-index: 1103;
+        }
+
+        .date-picker-wrapper .gap .gap-bottom-mask {
+            z-index: 1103;
+        }
