web_ui - Плата за пользование

--- a/WEB_UI/Areas/Directory/Views/Home/UsageFee.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/UsageFee.cshtml
@@ -116,7 +116,7 @@
                                 <div class="card-header">ПЕРИОДЫ</div>
                                 <div class="card-body">
                                     <div class="row">
-                                        <div class="col-sm-12" id="list-period">
+                                        <div class="col-sm-12" id="usage-fee-period">
 
                                         </div>
                                     </div>
