--- a/WEB_UI/Content/module/report/view_td_report.css
+++ b/WEB_UI/Content/module/report/view_td_report.css
@@ -11755,14 +11755,18 @@ fieldset {
 #outgoing-total-division-cargo2-chart,
 #outgoing-total-ext-station-chart,
 #outgoing-total-ext-station-ukr-chart,
-#outgoing-total-ext-station-exp-chart {
+#outgoing-total-ext-station-exp-chart,
+#usage-fee-cargo-chart
+{
     width: 100%;
     height: 500px;
 }
 
 #outgoing-total-operators-cargo-chart,
 #outgoing-operator-amkr-chart,
-#outgoing-total-cargo-metall-chart {
+#outgoing-total-cargo-metall-chart,
+#usage-fee-operator-amkr-chart,
+#usage-fee-operator-amkr-derailment-chart {
     width: 100%;
     height: 1000px;
 }
