--- a/WEB_UI/Areas/Directory/Views/Home/UsageFee.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/UsageFee.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="~/Content/view/directory/usage_fee.css">
     <!-- модули -->
     <link href="~/Content/module/directory/table_directory.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/module/report/table_td_report.css" rel="stylesheet" />
 
 }
 
@@ -21,14 +22,15 @@
 
     <script src="~/Scripts/view/shared/common.js"></script>                 <!-- Общая библиотека методов программы -->
     <script src="~/Scripts/module/shared/common.js"></script>
-    <script src="~/Scripts/module/shared/modal_confirm_form.js"></script>-->   <!-- Форма сообщений подтверждения -->
-    <script src="~/Scripts/api/shared.js"></script>-->                      <!-- Общая библиотека методов API -->
+    <script src="~/Scripts/module/shared/modal_confirm_form.js"></script>   <!-- Форма сообщений подтверждения -->
+    <script src="~/Scripts/api/shared.js"></script>                     <!-- Общая библиотека методов API -->
     <script src="~/Scripts/api/ids_server.js"></script>                     <!-- Работа с сервером библиотека методов API -->
     <script src="~/Scripts/api/ids_direct.js"></script>
     <script src="~/Scripts/api/ids_wsd.js"></script>
 
-
     <script src="~/Scripts/module/directory/table_directory.js"></script>
+    <script src="~/Scripts/module/report/table_td_report.js"></script>
+
     <script src="~/Scripts/view/directory/main_usage_fee.js"></script> <!--  -->
 }
 
@@ -39,13 +41,14 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse text-light" id="nb-incoming">
-            @*<form class="form-inline d-flex w-100">
-                    <div class="form-group mb-2">
-                        <label for="num_vagon" class="col-form-label-sm mr-2">Номер вагона:</label>
-                        <input type="number" class="form-control-sm" id="num_vagon" name="num_vagon">
-                    </div>
-                    <button id="searsh" class="btn btn-primary btn-sm ml-1 mb-2">Найти</button>
-                </form>*@
+            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link active" id="pills-rates-tab" data-toggle="pill" data-target="#pills-rates" type="button" role="tab" aria-controls="pills-rates" aria-selected="true">СТАВКИ</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="pills-correction-tab" data-toggle="pill" data-target="#pills-correction" type="button" role="tab" aria-controls="pills-correction" aria-selected="false">КОРРЕКТИРОВКА</button>
+                </li>
+            </ul>
         </div>
         <div>
             <label class="text-warning">@User.Identity.Name</label><br />
@@ -60,29 +63,74 @@
     <div class="alert" id="main-alert"></div>
     <div class="row mt-1">
         <div class="col-sm-12">
-            <div class="card bg-light mb-3">
-                <div class="card-header text-center">РАСЧЕТ ПЛАТЫ ЗА ПОЛЬЗОВАНИЕ</div>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-sm-5">
-                            <div class="card border-secondary mb-3">
-                                <div class="card-header">Справочник операторов</div>
+            <div class="tab-content" id="pills-tabContent">
+                <div class="tab-pane fade show active" id="pills-rates" role="tabpanel" aria-labelledby="pills-rates-tab">
+                    <div class="row mt-1">
+                        <div class="col-sm-12">
+                            <div class="card bg-light mb-3">
+                                <div class="card-header text-center">
+                                    РАСЧЕТ ПЛАТЫ ЗА ПОЛЬЗОВАНИЕ
+                                </div>
                                 <div class="card-body">
                                     <div class="row">
-                                        <div class="col-sm-12" id="operators-wagons">
+                                        <div class="col-sm-5">
+                                            <div class="card border-secondary mb-3">
+                                                <div class="card-header">Справочник операторов</div>
+                                                <div class="card-body">
+                                                    <div class="row">
+                                                        <div class="col-sm-12" id="operators-wagons">
 
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-7">
+                                            <div class="card border-primary mb-3">
+                                                <div class="card-header">Род вагонов</div>
+                                                <div class="card-body">
+                                                    <div class="row">
+                                                        <div class="col-sm-12" id="operators-wagons-genus">
+
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-7">
-                            <div class="card border-primary mb-3">
-                                <div class="card-header">Род вагонов</div>
+                    </div>
+                    <div class="row mt-1">
+                        <div class="col-sm-12">
+                            <div class="card bg-light mb-3">
+                                <div class="card-header text-center">УСЛОВИЯ РАСЧЕТА</div>
                                 <div class="card-body">
                                     <div class="row">
-                                        <div class="col-sm-12" id="operators-wagons-genus">
+                                        <div class="col-sm-3">
+                                            <div class="card border-secondary mb-3">
+                                                <div class="card-header">УСЛОВИЕ</div>
+                                                <div class="card-body">
+                                                    <div class="row">
+                                                        <div class="col-sm-12" id="form-edit">
 
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-9">
+                                            <div class="card border-primary mb-3">
+                                                <div class="card-header">ПЕРИОДЫ</div>
+                                                <div class="card-body">
+                                                    <div class="row">
+                                                        <div class="col-sm-12" id="usage-fee-period">
+
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -90,34 +138,35 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
-    <div class="row mt-1">
-        <div class="col-sm-12">
-            <div class="card bg-light mb-3">
-                <div class="card-header text-center">УСЛОВИЯ РАСЧЕТА</div>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <div class="card border-secondary mb-3">
-                                <div class="card-header">УСЛОВИЕ</div>
+                <div class="tab-pane fade" id="pills-correction" role="tabpanel" aria-labelledby="pills-correction-tab">
+                    <div class="row mt-1">
+                        <div class="col-sm-12">
+                            <div class="card bg-light mb-3">
+                                <div class="card-header text-center">
+                                    КОРРЕКТИРОВКА ИТОГОВОЙ СУММЫ ПЛАТЫ В РУЧНОМ РЕЖИМЕ
+                                </div>
                                 <div class="card-body">
-                                    <div class="row">
-                                        <div class="col-sm-12" id="form-edit">
-
+                                    <div class="row mb-1">
+                                        <div class="col-sm-12">
+                                            <form class="form-inline">
+                                                <label class="col-form-label text-dark mr-2" for="num_wagon">Найти вагон:</label>
+                                                <input class="form-control mr-sm-2" id="num_wagon" name="num_wagon" type="number" placeholder="Номер вагона" aria-label="Search">
+                                                <button class="btn btn-primary my-2 my-sm-0" id="bt_search_wagon" name="bt_search_wagon" type="submit">Search</button>
+                                            </form>
                                         </div>
                                     </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-9">
-                            <div class="card border-primary mb-3">
-                                <div class="card-header">ПЕРИОДЫ</div>
-                                <div class="card-body">
-                                    <div class="row">
-                                        <div class="col-sm-12" id="usage-fee-period">
+                                    <div class="row mb-1">
+                                        <div class="col-sm-12">
+                                            <div class="card bg-light mb-3">
+                                                <div class="card-header text-center">ВЫБРАННЫЕ ВАГОНЫ</div>
+                                                <div class="card-body">
+                                                    <div class="row">
+                                                        <div class="col-sm-12" id="usage-fee-outgoing-cars">
 
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -129,4 +178,5 @@
         </div>
     </div>
 </div>
+
 
