Отчеты плата за пользование (общий)  - исправил учет платы введеной вручную  - добавил груз прибытие - без схода

--- a/WEB_UI/Content/module/report/view_td_report.css
+++ b/WEB_UI/Content/module/report/view_td_report.css
@@ -11756,8 +11756,8 @@ fieldset {
 #outgoing-total-ext-station-chart,
 #outgoing-total-ext-station-ukr-chart,
 #outgoing-total-ext-station-exp-chart,
-#usage-fee-cargo-chart
-{
+#usage-fee-cargo-not-derailment-chart,
+#usage-fee-cargo-chart {
     width: 100%;
     height: 500px;
 }
