Отчет ТД Остаток- 4 отчет Род вагона

--- a/WEB_UI/Content/module/report/view_td_report.css
+++ b/WEB_UI/Content/module/report/view_td_report.css
@@ -11757,7 +11757,9 @@ fieldset {
 #outgoing-total-ext-station-ukr-chart,
 #outgoing-total-ext-station-exp-chart,
 #usage-fee-cargo-not-derailment-chart,
-#usage-fee-cargo-chart {
+#usage-fee-cargo-chart,
+#residue-total-genus-chart
+{
     width: 100%;
     height: 500px;
 }
