Отчет ТД - Остаток "Род вагонов-станция" - закончил

--- a/WEB_UI/Content/module/report/view_td_report.css
+++ b/WEB_UI/Content/module/report/view_td_report.css
@@ -11768,7 +11768,8 @@ fieldset {
 #outgoing-operator-amkr-chart,
 #outgoing-total-cargo-metall-chart,
 #usage-fee-operator-amkr-chart,
-#usage-fee-operator-amkr-derailment-chart {
+#usage-fee-operator-amkr-derailment-chart,
+#residue-total-genus-station-amkr-chart {
     width: 100%;
     height: 1000px;
 }
